@@ -12,7 +12,9 @@ Issue #161 Enhancement  - Increase MailScanner thread limit in EFA-Configure
 Issue #164 Enhancement  - Add MailWatch Password Reset to EFA-Configure 
 Issue #166 Bug          - MailWatch cron job not executing contents
 Issue #169 Enhancement  - Clean up clamav-unoffical-sigs script
+Issue #171 Bug          - Update clamav -- fix any clamav discrepancies
 
+EPEL Repository is now enabled
 Add 4GB Swap partition to new builds.
 
 ############################################################
